@@ -1,3 +1,10 @@
+2011-12-10  Borut Razem  <borutr@users.sourceforge.net>
+  * gpasm/directive.c, gpasm/gperror.c, gpasm/gperror.h:
+    fixed bug #3153394: PIC18 - relative branch - revision v595:
+    added warnig for odd traget address;
+    code generated for odd target address is now equal to the code 
+    generated by MPASM
+
 2011-12-08  Borut Razem  <borutr@users.sourceforge.net>
   * libgputils/gpprocessor.c: corrected coff_type for __16CR54C
 
